Parte 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     def_declr -> declaration def_declr
Rule 2     def_declr -> definition def_declr
Rule 3     def_declr -> declaration
Rule 4     def_declr -> definition
Rule 5     program -> def_declr
Rule 6     empty -> <empty>
Rule 7     declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type
Rule 8     declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type
Rule 9     definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block
Rule 10    definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block
Rule 11    varg -> <empty>
Rule 12    arg -> VARIABLE COLON type
Rule 13    arg -> VARIABLE COLON type COMMA arg
Rule 14    block -> LBRACKET block_content RBRACKET
Rule 15    block -> LBRACKET empty RBRACKET
Rule 16    block_content -> statement block_content
Rule 17    block_content -> statement
Rule 18    statement -> return
Rule 19    statement -> stat_expression
Rule 20    statement -> if
Rule 21    statement -> if_else
Rule 22    statement -> while
Rule 23    statement -> var_decl
Rule 24    statement -> var_ass
Rule 25    statement -> array_decl
Rule 26    statement -> array_ass
Rule 27    return -> RETURN SEMICOLONS
Rule 28    return -> RETURN expression SEMICOLONS
Rule 29    stat_expression -> expression SEMICOLONS
Rule 30    if -> IF expression block
Rule 31    if_else -> if ELSE block
Rule 32    while -> WHILE expression block
Rule 33    var_decl -> VARIABLE COLON type EQUALS expression SEMICOLONS
Rule 34    array_decl -> VARIABLE COLON LRPAREN type RRPAREN SEMICOLONS
Rule 35    array_ass -> VARIABLE LRPAREN expression RRPAREN EQUALS expression SEMICOLONS
Rule 36    type -> INT_TYPE
Rule 37    type -> FLOAT_TYPE
Rule 38    type -> STRING_TYPE
Rule 39    type -> BOOL_TYPE
Rule 40    type -> VOID_TYPE
Rule 41    var_ass -> VARIABLE EQUALS expression SEMICOLONS
Rule 42    expression -> expression PLUS expression
Rule 43    expression -> expression MINUS expression
Rule 44    expression -> expression TIMES expression
Rule 45    expression -> expression DIVIDE expression
Rule 46    expression -> expression COMP expression
Rule 47    expression -> expression AND expression
Rule 48    expression -> expression OR expression
Rule 49    expression -> expression NOT_EQUALS expression
Rule 50    expression -> expression GREATER_OR_EQUAL expression
Rule 51    expression -> expression LESS_OR_EQUALS expression
Rule 52    expression -> expression GREATER expression
Rule 53    expression -> expression LESS expression
Rule 54    expression -> expression MODULO expression
Rule 55    expression -> MINUS expression
Rule 56    expression -> LPAREN expression RPAREN
Rule 57    expression -> INT
Rule 58    expression -> FLOAT
Rule 59    expression -> STRING
Rule 60    expression -> TRUE
Rule 61    expression -> FALSE
Rule 62    expression -> VARIABLE
Rule 63    expression -> NOT expression
Rule 64    expression -> VARIABLE LRPAREN expression RRPAREN
Rule 65    expression -> GET_ARRAY LRPAREN expression RRPAREN
Rule 66    expression -> VARIABLE LPAREN argument_f RPAREN
Rule 67    argf -> <empty>
Rule 68    arg_f -> expression
Rule 69    arg_f -> expression COMMA arg_f
Rule 70    argument_f -> arg_f
Rule 71    argument_f -> argf

Terminals, with rules where they appear

AND                  : 47
BOOL_TYPE            : 39
COLON                : 7 8 9 10 12 13 33 34
COMMA                : 13 69
COMP                 : 46
DECL                 : 7 8
DEF                  : 9 10
DIVIDE               : 45
ELSE                 : 31
EQUALS               : 33 35 41
FALSE                : 61
FLOAT                : 58
FLOAT_TYPE           : 37
GET_ARRAY            : 65
GREATER              : 52
GREATER_OR_EQUAL     : 50
IF                   : 30
INT                  : 57
INT_TYPE             : 36
LBRACKET             : 14 15
LESS                 : 53
LESS_OR_EQUALS       : 51
LPAREN               : 7 8 9 10 56 66
LRPAREN              : 34 35 64 65
MINUS                : 43 55
MODULO               : 54
NOT                  : 63
NOT_EQUALS           : 49
OR                   : 48
PLUS                 : 42
RBRACKET             : 14 15
RETURN               : 27 28
RPAREN               : 7 8 9 10 56 66
RRPAREN              : 34 35 64 65
SEMICOLONS           : 27 28 29 33 34 35 41
STRING               : 59
STRING_TYPE          : 38
TIMES                : 44
TRUE                 : 60
VARIABLE             : 7 8 9 10 12 13 33 34 35 41 62 64 66
VOID_TYPE            : 40
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

arg                  : 8 9 13
arg_f                : 69 70
argf                 : 71
argument_f           : 66
array_ass            : 26
array_decl           : 25
block                : 9 10 30 31 32
block_content        : 14 16
declaration          : 1 3
def_declr            : 1 2 5
definition           : 2 4
empty                : 15
expression           : 28 29 30 32 33 35 35 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 63 64 65 68 69
if                   : 20 31
if_else              : 21
program              : 0
return               : 18
stat_expression      : 19
statement            : 16 17
type                 : 7 8 9 10 12 13 33 34
var_ass              : 24
var_decl             : 23
varg                 : 7 10
while                : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (5) program -> . def_declr
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (7) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (9) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    DECL            shift and go to state 5
    DEF             shift and go to state 6

    program                        shift and go to state 1
    def_declr                      shift and go to state 2
    declaration                    shift and go to state 3
    definition                     shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (5) program -> def_declr .

    $end            reduce using rule 5 (program -> def_declr .)


state 3

    (1) def_declr -> declaration . def_declr
    (3) def_declr -> declaration .
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (7) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (9) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    $end            reduce using rule 3 (def_declr -> declaration .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    declaration                    shift and go to state 3
    def_declr                      shift and go to state 7
    definition                     shift and go to state 4

state 4

    (2) def_declr -> definition . def_declr
    (4) def_declr -> definition .
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (7) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (9) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    $end            reduce using rule 4 (def_declr -> definition .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    definition                     shift and go to state 4
    def_declr                      shift and go to state 8
    declaration                    shift and go to state 3

state 5

    (7) declaration -> DECL . VARIABLE LPAREN varg RPAREN COLON type
    (8) declaration -> DECL . VARIABLE LPAREN arg RPAREN COLON type

    VARIABLE        shift and go to state 9


state 6

    (9) definition -> DEF . VARIABLE LPAREN arg RPAREN COLON type block
    (10) definition -> DEF . VARIABLE LPAREN varg RPAREN COLON type block

    VARIABLE        shift and go to state 10


state 7

    (1) def_declr -> declaration def_declr .

    $end            reduce using rule 1 (def_declr -> declaration def_declr .)


state 8

    (2) def_declr -> definition def_declr .

    $end            reduce using rule 2 (def_declr -> definition def_declr .)


state 9

    (7) declaration -> DECL VARIABLE . LPAREN varg RPAREN COLON type
    (8) declaration -> DECL VARIABLE . LPAREN arg RPAREN COLON type

    LPAREN          shift and go to state 11


state 10

    (9) definition -> DEF VARIABLE . LPAREN arg RPAREN COLON type block
    (10) definition -> DEF VARIABLE . LPAREN varg RPAREN COLON type block

    LPAREN          shift and go to state 12


state 11

    (7) declaration -> DECL VARIABLE LPAREN . varg RPAREN COLON type
    (8) declaration -> DECL VARIABLE LPAREN . arg RPAREN COLON type
    (11) varg -> .
    (12) arg -> . VARIABLE COLON type
    (13) arg -> . VARIABLE COLON type COMMA arg

    RPAREN          reduce using rule 11 (varg -> .)
    VARIABLE        shift and go to state 13

    varg                           shift and go to state 14
    arg                            shift and go to state 15

state 12

    (9) definition -> DEF VARIABLE LPAREN . arg RPAREN COLON type block
    (10) definition -> DEF VARIABLE LPAREN . varg RPAREN COLON type block
    (12) arg -> . VARIABLE COLON type
    (13) arg -> . VARIABLE COLON type COMMA arg
    (11) varg -> .

    VARIABLE        shift and go to state 13
    RPAREN          reduce using rule 11 (varg -> .)

    arg                            shift and go to state 16
    varg                           shift and go to state 17

state 13

    (12) arg -> VARIABLE . COLON type
    (13) arg -> VARIABLE . COLON type COMMA arg

    COLON           shift and go to state 18


state 14

    (7) declaration -> DECL VARIABLE LPAREN varg . RPAREN COLON type

    RPAREN          shift and go to state 19


state 15

    (8) declaration -> DECL VARIABLE LPAREN arg . RPAREN COLON type

    RPAREN          shift and go to state 20


state 16

    (9) definition -> DEF VARIABLE LPAREN arg . RPAREN COLON type block

    RPAREN          shift and go to state 21


state 17

    (10) definition -> DEF VARIABLE LPAREN varg . RPAREN COLON type block

    RPAREN          shift and go to state 22


state 18

    (12) arg -> VARIABLE COLON . type
    (13) arg -> VARIABLE COLON . type COMMA arg
    (36) type -> . INT_TYPE
    (37) type -> . FLOAT_TYPE
    (38) type -> . STRING_TYPE
    (39) type -> . BOOL_TYPE
    (40) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 23

state 19

    (7) declaration -> DECL VARIABLE LPAREN varg RPAREN . COLON type

    COLON           shift and go to state 29


state 20

    (8) declaration -> DECL VARIABLE LPAREN arg RPAREN . COLON type

    COLON           shift and go to state 30


state 21

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN . COLON type block

    COLON           shift and go to state 31


state 22

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN . COLON type block

    COLON           shift and go to state 32


state 23

    (12) arg -> VARIABLE COLON type .
    (13) arg -> VARIABLE COLON type . COMMA arg

    RPAREN          reduce using rule 12 (arg -> VARIABLE COLON type .)
    COMMA           shift and go to state 33


state 24

    (36) type -> INT_TYPE .

    COMMA           reduce using rule 36 (type -> INT_TYPE .)
    RPAREN          reduce using rule 36 (type -> INT_TYPE .)
    DECL            reduce using rule 36 (type -> INT_TYPE .)
    DEF             reduce using rule 36 (type -> INT_TYPE .)
    $end            reduce using rule 36 (type -> INT_TYPE .)
    LBRACKET        reduce using rule 36 (type -> INT_TYPE .)
    EQUALS          reduce using rule 36 (type -> INT_TYPE .)
    RRPAREN         reduce using rule 36 (type -> INT_TYPE .)


state 25

    (37) type -> FLOAT_TYPE .

    COMMA           reduce using rule 37 (type -> FLOAT_TYPE .)
    RPAREN          reduce using rule 37 (type -> FLOAT_TYPE .)
    DECL            reduce using rule 37 (type -> FLOAT_TYPE .)
    DEF             reduce using rule 37 (type -> FLOAT_TYPE .)
    $end            reduce using rule 37 (type -> FLOAT_TYPE .)
    LBRACKET        reduce using rule 37 (type -> FLOAT_TYPE .)
    EQUALS          reduce using rule 37 (type -> FLOAT_TYPE .)
    RRPAREN         reduce using rule 37 (type -> FLOAT_TYPE .)


state 26

    (38) type -> STRING_TYPE .

    COMMA           reduce using rule 38 (type -> STRING_TYPE .)
    RPAREN          reduce using rule 38 (type -> STRING_TYPE .)
    DECL            reduce using rule 38 (type -> STRING_TYPE .)
    DEF             reduce using rule 38 (type -> STRING_TYPE .)
    $end            reduce using rule 38 (type -> STRING_TYPE .)
    LBRACKET        reduce using rule 38 (type -> STRING_TYPE .)
    EQUALS          reduce using rule 38 (type -> STRING_TYPE .)
    RRPAREN         reduce using rule 38 (type -> STRING_TYPE .)


state 27

    (39) type -> BOOL_TYPE .

    COMMA           reduce using rule 39 (type -> BOOL_TYPE .)
    RPAREN          reduce using rule 39 (type -> BOOL_TYPE .)
    DECL            reduce using rule 39 (type -> BOOL_TYPE .)
    DEF             reduce using rule 39 (type -> BOOL_TYPE .)
    $end            reduce using rule 39 (type -> BOOL_TYPE .)
    LBRACKET        reduce using rule 39 (type -> BOOL_TYPE .)
    EQUALS          reduce using rule 39 (type -> BOOL_TYPE .)
    RRPAREN         reduce using rule 39 (type -> BOOL_TYPE .)


state 28

    (40) type -> VOID_TYPE .

    COMMA           reduce using rule 40 (type -> VOID_TYPE .)
    RPAREN          reduce using rule 40 (type -> VOID_TYPE .)
    DECL            reduce using rule 40 (type -> VOID_TYPE .)
    DEF             reduce using rule 40 (type -> VOID_TYPE .)
    $end            reduce using rule 40 (type -> VOID_TYPE .)
    LBRACKET        reduce using rule 40 (type -> VOID_TYPE .)
    EQUALS          reduce using rule 40 (type -> VOID_TYPE .)
    RRPAREN         reduce using rule 40 (type -> VOID_TYPE .)


state 29

    (7) declaration -> DECL VARIABLE LPAREN varg RPAREN COLON . type
    (36) type -> . INT_TYPE
    (37) type -> . FLOAT_TYPE
    (38) type -> . STRING_TYPE
    (39) type -> . BOOL_TYPE
    (40) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 34

state 30

    (8) declaration -> DECL VARIABLE LPAREN arg RPAREN COLON . type
    (36) type -> . INT_TYPE
    (37) type -> . FLOAT_TYPE
    (38) type -> . STRING_TYPE
    (39) type -> . BOOL_TYPE
    (40) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 35

state 31

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN COLON . type block
    (36) type -> . INT_TYPE
    (37) type -> . FLOAT_TYPE
    (38) type -> . STRING_TYPE
    (39) type -> . BOOL_TYPE
    (40) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 36

state 32

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN COLON . type block
    (36) type -> . INT_TYPE
    (37) type -> . FLOAT_TYPE
    (38) type -> . STRING_TYPE
    (39) type -> . BOOL_TYPE
    (40) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 37

state 33

    (13) arg -> VARIABLE COLON type COMMA . arg
    (12) arg -> . VARIABLE COLON type
    (13) arg -> . VARIABLE COLON type COMMA arg

    VARIABLE        shift and go to state 13

    arg                            shift and go to state 38

state 34

    (7) declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .

    DECL            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .)
    DEF             reduce using rule 7 (declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .)
    $end            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type .)


state 35

    (8) declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .

    DECL            reduce using rule 8 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)
    DEF             reduce using rule 8 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)
    $end            reduce using rule 8 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)


state 36

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN COLON type . block
    (14) block -> . LBRACKET block_content RBRACKET
    (15) block -> . LBRACKET empty RBRACKET

    LBRACKET        shift and go to state 40

    block                          shift and go to state 39

state 37

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN COLON type . block
    (14) block -> . LBRACKET block_content RBRACKET
    (15) block -> . LBRACKET empty RBRACKET

    LBRACKET        shift and go to state 40

    block                          shift and go to state 41

state 38

    (13) arg -> VARIABLE COLON type COMMA arg .

    RPAREN          reduce using rule 13 (arg -> VARIABLE COLON type COMMA arg .)


state 39

    (9) definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .

    DECL            reduce using rule 9 (definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .)
    DEF             reduce using rule 9 (definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .)
    $end            reduce using rule 9 (definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block .)


state 40

    (14) block -> LBRACKET . block_content RBRACKET
    (15) block -> LBRACKET . empty RBRACKET
    (16) block_content -> . statement block_content
    (17) block_content -> . statement
    (6) empty -> .
    (18) statement -> . return
    (19) statement -> . stat_expression
    (20) statement -> . if
    (21) statement -> . if_else
    (22) statement -> . while
    (23) statement -> . var_decl
    (24) statement -> . var_ass
    (25) statement -> . array_decl
    (26) statement -> . array_ass
    (27) return -> . RETURN SEMICOLONS
    (28) return -> . RETURN expression SEMICOLONS
    (29) stat_expression -> . expression SEMICOLONS
    (30) if -> . IF expression block
    (31) if_else -> . if ELSE block
    (32) while -> . WHILE expression block
    (33) var_decl -> . VARIABLE COLON type EQUALS expression SEMICOLONS
    (41) var_ass -> . VARIABLE EQUALS expression SEMICOLONS
    (34) array_decl -> . VARIABLE COLON LRPAREN type RRPAREN SEMICOLONS
    (35) array_ass -> . VARIABLE LRPAREN expression RRPAREN EQUALS expression SEMICOLONS
    (42) expression -> . expression PLUS expression
    (43) expression -> . expression MINUS expression
    (44) expression -> . expression TIMES expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression COMP expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression OR expression
    (49) expression -> . expression NOT_EQUALS expression
    (50) expression -> . expression GREATER_OR_EQUAL expression
    (51) expression -> . expression LESS_OR_EQUALS expression
    (52) expression -> . expression GREATER expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression MODULO expression
    (55) expression -> . MINUS expression
    (56) expression -> . LPAREN expression RPAREN
    (57) expression -> . INT
    (58) expression -> . FLOAT
    (59) expression -> . STRING
    (60) expression -> . TRUE
    (61) expression -> . FALSE
    (62) expression -> . VARIABLE
    (63) expression -> . NOT expression
    (64) expression -> . VARIABLE LRPAREN expression RRPAREN
    (65) expression -> . GET_ARRAY LRPAREN expression RRPAREN
    (66) expression -> . VARIABLE LPAREN argument_f RPAREN

    RBRACKET        reduce using rule 6 (empty -> .)
    RETURN          shift and go to state 54
    IF              shift and go to state 56
    WHILE           shift and go to state 57
    VARIABLE        shift and go to state 58
    MINUS           shift and go to state 59
    LPAREN          shift and go to state 60
    INT             shift and go to state 61
    FLOAT           shift and go to state 62
    STRING          shift and go to state 63
    TRUE            shift and go to state 64
    FALSE           shift and go to state 65
    NOT             shift and go to state 66
    GET_ARRAY       shift and go to state 67

    block_content                  shift and go to state 42
    empty                          shift and go to state 43
    statement                      shift and go to state 44
    return                         shift and go to state 45
    stat_expression                shift and go to state 46
    if                             shift and go to state 47
    if_else                        shift and go to state 48
    while                          shift and go to state 49
    var_decl                       shift and go to state 50
    var_ass                        shift and go to state 51
    array_decl                     shift and go to state 52
    array_ass                      shift and go to state 53
    expression                     shift and go to state 55

state 41

    (10) definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .

    DECL            reduce using rule 10 (definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .)
    DEF             reduce using rule 10 (definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .)
    $end            reduce using rule 10 (definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block .)


state 42

    (14) block -> LBRACKET block_content . RBRACKET

    RBRACKET        shift and go to state 68


state 43

    (15) block -> LBRACKET empty . RBRACKET

    RBRACKET        shift and go to state 69


state 44

    (16) block_content -> statement . block_content
    (17) block_content -> statement .
    (16) block_content -> . statement block_content
    (17) block_content -> . statement
    (18) statement -> . return
    (19) statement -> . stat_expression
    (20) statement -> . if
    (21) statement -> . if_else
    (22) statement -> . while
    (23) statement -> . var_decl
    (24) statement -> . var_ass
    (25) statement -> . array_decl
    (26) statement -> . array_ass
    (27) return -> . RETURN SEMICOLONS
    (28) return -> . RETURN expression SEMICOLONS
    (29) stat_expression -> . expression SEMICOLONS
    (30) if -> . IF expression block
    (31) if_else -> . if ELSE block
    (32) while -> . WHILE expression block
    (33) var_decl -> . VARIABLE COLON type EQUALS expression SEMICOLONS
    (41) var_ass -> . VARIABLE EQUALS expression SEMICOLONS
    (34) array_decl -> . VARIABLE COLON LRPAREN type RRPAREN SEMICOLONS
    (35) array_ass -> . VARIABLE LRPAREN expression RRPAREN EQUALS expression SEMICOLONS
    (42) expression -> . expression PLUS expression
    (43) expression -> . expression MINUS expression
    (44) expression -> . expression TIMES expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression COMP expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression OR expression
    (49) expression -> . expression NOT_EQUALS expression
    (50) expression -> . expression GREATER_OR_EQUAL expression
    (51) expression -> . expression LESS_OR_EQUALS expression
    (52) expression -> . expression GREATER expression
    (53) expression -> . expression LESS expression
    (54) expression -> . expression MODULO expression
    (55) expression -> . MINUS expression
    (56) expression -> . LPAREN expression RPAREN
    (57) expression -> . INT
    (58) expression -> . FLOAT
    (59) expression -> . STRING
    (60) expression -> . TRUE
    (61) expression -> . FALSE
    (62) expression -> . VARIABLE
    (63) expression -> . NOT expression
    (64) expression -> . VARIABLE LRPAREN expression RRPAREN
    (65) expression -> . GET_ARRAY LRPAREN expression RRPAREN
    (66) expression -> . VARIABLE LPAREN argument_f RPAREN

    RBRACKET        reduce using rule 17 (block_content -> statement .)
    RETURN          shift and go to state 54
    IF              shift and go to state 56
    WHILE           shift and go to state 57
    VARIABLE        shift and go to state 58
    MINUS           shift and go to state 59
    LPAREN          shift and go to state 60
    INT             shift and go to state 61
    FLOAT           shift and go to state 62
    STRING          shift and go to state 63
    TRUE            shift and go to state 64
    FALSE           shift and go to state 65
    NOT             shift and go to state 66
    GET_ARRAY       shift and go to state 67

    statement                      shift and go to state 44
    block_content                  shift and go to state 70
    return                         shift and go to state 45
    stat_expression                shift and go to state 46
    if                             shift and go to state 47
    if_else                        shift and go to state 48
    while                          shift and go to state 49
    var_decl                       shift and go to state 50
    var_ass                        shift and go to state 51
    array_decl                     shift and go to state 52
    array_ass                      shift and go to state 53
    expression                     shift and go to state 55

state 45

    (18) statement -> return .

    RETURN          reduce using rule 18 (statement -> return .)
    IF              reduce using rule 18 (statement -> return .)
    WHILE           reduce using rule 18 (statement -> return .)
    VARIABLE        reduce using rule 18 (statement -> return .)
    MINUS           reduce using rule 18 (statement -> return .)
    LPAREN          reduce using rule 18 (statement -> return .)
    INT             reduce using rule 18 (statement -> return .)
    FLOAT           reduce using rule 18 (statement -> return .)
    STRING          reduce using rule 18 (statement -> return .)
    TRUE            reduce using rule 18 (statement -> return .)
    FALSE           reduce using rule 18 (statement -> return .)
    NOT             reduce using rule 18 (statement -> return .)
    GET_ARRAY       reduce using rule 18 (statement -> return .)
    RBRACKET        reduce using rule 18 (statement -> return .)


state 46

    (19) statement -> stat_expression .

    RETURN          reduce using rule 19 (statement -> stat_expression .)
    IF              reduce using rule 19 (statement -> stat_expression .)
    WHILE           reduce using rule 19 (statement -> stat_expression .)
    VARIABLE        reduce using rule 19 (statement -> stat_expression .)
    MINUS           reduce using rule 19 (statement -> stat_expression .)
    LPAREN          reduce using rule 19 (statement -> stat_expression .)
    INT             reduce using rule 19 (statement -> stat_expression .)
    FLOAT           reduce using rule 19 (statement -> stat_expression .)
    STRING          reduce using rule 19 (statement -> stat_expression .)
    TRUE            reduce using rule 19 (statement -> stat_expression .)
    FALSE           reduce using rule 19 (statement -> stat_expression .)
    NOT             reduce using rule 19 (statement -> stat_expression .)
    GET_ARRAY       reduce using rule 19 (statement -> stat_expression .)
    RBRACKET        reduce using rule 19 (statement -> stat_expression .)


state 47

    (20) statement -> if .
    (31) if_else -> if . ELSE block

    RETURN          reduce using rule 20 (statement -> if .)
    IF              reduce using rule 20 (statement -> if .)
    WHILE           reduce using rule 20 (statement -> if .)
    VARIABLE        reduce using rule 20 (statement -> if .)
    MINUS           reduce using rule 20 (statement -> if .)
    LPAREN          reduce using rule 20 (statement -> if .)
    INT             reduce using rule 20 (statement -> if .)
    FLOAT           reduce using rule 20 (statement -> if .)
    STRING          reduce using rule 20 (statement -> if .)
    TRUE            reduce using rule 20 (statement -> if .)
    FALSE           reduce using rule 20 (statement -> if .)
    NOT             reduce using rule 20 (statement -> if .)
    GET_ARRAY       reduce using rule 20 (statement -> if .)
    RBRACKET        reduce using rule 20 (statement -> if .)
    ELSE            shift and go to state 71


state 48

    (21) statement -> if_else .

    RETURN          reduce using rule 21 (statement -> if_else .)
    IF              reduce using rule 21 (statement -> if_else .)
    WHILE           reduce using rule 21 (statement -> if_else .)
    VARIABLE        reduce using rule 21 (statement -> if_else .)
    MINUS           reduce using rule 21 (statement -> if_else .)
    LPAREN          reduce using rule 21 (statement -> if_else .)
    INT             reduce using rule 21 (statement -> if_else .)
    FLOAT           reduce using rule 21 (statement -> if_else .)
    STRING          reduce using rule 21 (statement -> if_else .)
    TRUE            reduce using rule 21 (statement -> if_else .)
    FALSE           reduce using rule 21 (statement -> if_else .)
    NOT             reduce using rule 21 (statement -> if_else .)
    GET_ARRAY       reduce using rule 21 (statement -> if_else .)
    RBRACKET        reduce using rule 21 (statement -> if_else .)


state 49

    (22) statement -> while .

    RETURN          reduce using rule 22 (statement -> while .)
    IF              reduce using rule 22 (statement -> while .)
    WHILE           reduce using rule 22 (statement -> while .)
    VARIABLE        reduce using rule 22 (statement -> while .)
    MINUS           reduce using rule 22 (statement -> while .)
    LPAREN          reduce using rule 22 (statement -> while .)
    INT             reduce using rule 22 (statement -> while .)
    FLOAT           reduce using rule 22 (statement -> while .)
    STRING          reduce using rule 22 (statement -> while .)
    TRUE            reduce using rule 22 (statement -> while .)
    FALSE           reduce using rule 22 (statement -> while .)
    NOT             reduce using rule 22 (statement -> while .)
    GET_ARRAY       reduce using rule 22 (statement -> while .)
    RBRACKET        reduce using rule 22 (statement -> while .)


state 50

    (23) statement -> var_decl .

    RETURN          reduce using rule 23 (statement -> var_decl .)
    IF              reduce using rule 23 (statement -> var_decl .)
    WHILE           reduce using rule 23 (statement -> var_decl .)
    VARIABLE        reduce using rule 23 (statement -> var_decl .)
    MINUS           reduce using rule 23 (statement -> var_decl .)
    LPAREN          reduce using rule 23 (statement -> var_decl .)
    INT             reduce using rule 23 (statement -> var_decl .)
    FLOAT           reduce using rule 23 (statement -> var_decl .)
    STRING          reduce using rule 23 (statement -> var_decl .)
    TRUE            reduce using rule 23 (statement -> var_decl .)
    FALSE           reduce using rule 23 (statement -> var_decl .)
    NOT             reduce using rule 23 (statement -> var_decl .)
    GET_ARRAY       reduce using rule 23 (statement -> var_decl .)
    RBRACKET        reduce using rule 23 (statement -> var_decl .)


state 51

    (24) statement -> var_ass .

    RETURN          reduce using rule 24 (statement -> var_ass .)
    IF              reduce using rule 24 (statement -> var_ass .)
    WHILE           reduce using rule 24 (statement -> var_ass .)
    VARIABLE        reduce using rule 24 (statement -> var_ass .)
    MINUS           reduce using rule 24 (statement -> var_ass .)
    LPAREN          reduce using rule 24 (statement -> var_ass .)
    INT             reduce using rule 24 (statement -> var_ass .)
    FLOAT           reduce using rule 24 (statement -> var_ass .)
    STRING          reduce using rule 24 (statement -> var_ass .)
    TRUE            reduce using rule 24 (statement -> var_ass .)
    FALSE           reduce using rule 24 (statement -> var_ass .)
    NOT             reduce using rule 24 (statement -> var_ass .)
    GET_ARRAY       reduce using rule 24 (statement -> var_ass .)
    RBRACKET        reduce using rule 24 (statement -> var_ass .)


state 52

    (25) statement -> array_decl .

    RETURN          reduce using rule 25 (statement -> array_decl .)
    IF              reduce using rule 25 (statement -> array_decl .)
    WHILE           reduce using rule 25 (statement -> array_decl .)
    VARIABLE        reduce using rule 25 (statement -> array_decl .)
    MINUS           reduce using rule 25 (statement -> array_decl .)
    LPAREN          reduce using rule 25 (statement -> array_decl .)
    INT             reduce using rule 25 (statement -> array_decl .)
    FLOAT           reduce using rule 25 (statement -> array_decl .)
    STRING          reduce using rule 25 (statement -> array_decl .)
    TRUE            reduce using rule 25 (statement -> array_decl .)
    FALSE           reduce using rule 25 (statement -> array_decl .)
    NOT             reduce using rule 25 (statement -> array_decl .)
    GET_ARRAY       reduce using rule 25 (statement -> array_decl .)
    RBRACKET        reduce using rule 25 (statement -> array_decl .)


state 53

    (26) statement -> array_ass .

    RETURN          reduce using rule 26 (statement -> array_ass .)
    IF              reduce using rule 26 (statement -> array_ass .)
    WHILE           reduce using rule 26 (statement -> array_ass .)
    VARIABLE        reduce using rule 26 (statement -> array_ass .)
    MINUS           reduce using rule 26 (statement -> array_ass .)
    LPAREN          reduce using rule 26 (statement -> array_ass .)
    INT             reduce using rule 26 (statement -> array_ass .)
    FLOAT           reduce using rule 26 (statement -> array_ass .)
    STRING          reduce using rule 26 (statement -> array_ass .)
    TRUE            reduce using rule 26 (statement -> array_ass .)
    FALSE           reduce using rule 26 (statement -> array_ass .)
    NOT             reduce using rule 26 (statement -> array_ass .)
    GET_ARRAY       reduce using rule 26 (statement -> array_ass .)
